--- a/www/template/socket_template_1/index.html
+++ b/www/template/socket_template_1/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name = "format-detection" content = "telephone=no">
-  <title>Dva Demo</title>
+  <script src="./antm-viewport.js"></script>
+  <title></title>
   <link rel="stylesheet" href="index.css" />
 </head>
 <body>
